manifest/overlay/beta/web/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tictake-web
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tictake-tls
  routes:
    - match: HOST(`tictake.disam.dizatt.com`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: tictake-web-backend
          port: 8080
    - match: Host(`tictake.disam.dizatt.com`)
      kind: Rule
      services:
        - name: tictake-web-frontend
          port: 80
